[tool.poetry]
name = "darp-46k"
version = "0.1.0"
description = ""
authors = ["user <user@example.com>"]
readme = "README.md"
packages = [{include = "darp_46k"}]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
