name = "darp-46k"
version = "0.1.0"
description = ""
authors = ["user <user@example.com>"]
readme = "README.md"
packages = [{include = "darp_46k"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
download = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
